Added facebook installation and uninstallation test