@@ -11,6 +11,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>16</java.version>
+        <jvm.options>--add-opens java.base/java.lang=ALL-UNNAMED</jvm.options>
     </properties>
 
 
@@ -22,13 +23,11 @@
             <version>8.3.0</version>
         </dependency>
 
-
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
             <version>4.8.1</version>
         </dependency>
-
 
         <dependency>
             <groupId>io.cucumber</groupId>
@@ -42,6 +41,23 @@
             <version>7.11.1</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.7.1</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- START SLF4J dependency : just for supressing the log warning-->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>2.0.7</version>
+            <scope>runtime</scope>
+        </dependency>
+        <!-- STOP SLF4J dependency : just for supressing the log warning -->
+
     </dependencies>
 
     <build>
@@ -62,6 +78,7 @@
                 <version>3.0.0</version>
                 <configuration>
                     <useSystemClassLoader>false</useSystemClassLoader>
+                    <argLine>${jvm.options}</argLine>
                     <properties>
                     </properties>
                 </configuration>
